[gd_scene load_steps=13 format=3 uid="uid://c8f42wsc3qnoi"]

[ext_resource type="Theme" uid="uid://kncue5wmf60t" path="res://Themes/TextBoxTheme.tres" id="1_gjql6"]
[ext_resource type="Script" path="res://Nodes/UI/text_event.gd" id="1_mlikg"]
[ext_resource type="Theme" uid="uid://d3jmr5vwxye1k" path="res://Themes/CharacterNameTheme.tres" id="2_6lb7v"]
[ext_resource type="AudioStream" uid="uid://pbo245ogy8ja" path="res://Sounds/textNoise1.wav" id="4_mungk"]
[ext_resource type="AudioStream" uid="uid://djyj5rw13ukkf" path="res://Sounds/PMaybeModified.wav" id="5_4goyj"]
[ext_resource type="Texture2D" uid="uid://wppbu6o8vkrw" path="res://Nodes/UI/portraits/p-chan.png" id="5_lpbaj"]
[ext_resource type="AudioStream" uid="uid://dao8l51mdhn7m" path="res://Sounds/robonoise.wav" id="6_idilp"]
[ext_resource type="Texture2D" uid="uid://dmnfo8jrfkg68" path="res://Nodes/UI/portraits/agent-joms.png" id="6_w7wjm"]

[sub_resource type="Animation" id="Animation_dsp1n"]
resource_name = "In"
length = 0.40001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Darkener:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterTitle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(576, -40), Vector2(576, 61.56)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Textbox:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Profiles:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(0, 465), Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Profiles:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_r4miq"]
resource_name = "Out"
length = 0.40001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Darkener:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterTitle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(576, 61.56), Vector2(576, -40)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Textbox:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Profiles:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1.51572, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 471)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Profiles:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_nfntk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Darkener:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.585062, 0.585062, 0.585062, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterTitle:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 61.56)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Textbox:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Profiles:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Profiles:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cuian"]
_data = {
"In": SubResource("Animation_dsp1n"),
"Out": SubResource("Animation_r4miq"),
"RESET": SubResource("Animation_nfntk")
}

[node name="TextEvent" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mlikg")
dialog = ">P
Hey, J?
>J
Yes?
>P
I know we're not supposed to ask and all that but, what's your name?
>J
If you know you're not supposed to know, then why do you ask?
>P
Iunno. Maybe we could be friends or something. Wanna get a drink after work?
>J
Pass. I only drink alone.
>P
That defeats the point of drinking!
>J
Maybe for you. I prefer to drink a strong cider while sinking in my sofa, and staring at my fireplace.
>P
Alright grandma, very old fashioned of you. And so mature!
>J
Quiet down, kid. Besides, I can barely stand you as-is, I can't imagine what you'd be drunk.
>P
Oh, but I don't drink.
>J
Didn't you just ask me out on drinks?
>P
I drink soda! Alcohol tastes kinda bad.
>J
Alright.
>P
What about, uh... Tea?
>J
What about it?
>P
Would you like some?
>J
Actual tea or that sugary trash with bubbles in it that I saw you drinking yesterday?
>P
Either! But I guess not the sugary trash, if you put it that way.
>J
I'll think about it.
>P
Yippee!"
metadata/_edit_horizontal_guides_ = [622.0]

[node name="Darkener" type="ColorRect" parent="."]
modulate = Color(0.585062, 0.585062, 0.585062, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.4)

[node name="Textbox" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.1
anchor_top = 0.13
anchor_right = 0.9
anchor_bottom = 0.258
grow_horizontal = 2
theme = ExtResource("1_gjql6")

[node name="Background" type="ColorRect" parent="Textbox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.717647)

[node name="TextContent" type="RichTextLabel" parent="Textbox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.025
anchor_right = 0.99
anchor_bottom = 0.925
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 2
text = "If you design a quest, you are making a game"
scroll_active = false

[node name="CharacterTitle" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.095
anchor_right = 0.5
anchor_bottom = 0.095
offset_top = 0.760002
offset_bottom = 0.760002
theme = ExtResource("2_6lb7v")

[node name="Label" type="Label" parent="CharacterTitle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.5
offset_top = -19.0
offset_right = 97.5
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
text = "Character Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cuian")
}

[node name="TextSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_mungk")
volume_db = -9.629
bus = &"UIAudio"

[node name="PSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_4goyj")

[node name="robonoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_idilp")
volume_db = -12.0

[node name="Profiles" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PProfile" type="TextureRect" parent="Profiles"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.622
anchor_right = 0.15
anchor_bottom = 0.622
offset_left = 166.8
offset_top = 147.12
offset_right = 516.8
offset_bottom = 597.12
grow_vertical = 2
texture = ExtResource("5_lpbaj")

[node name="JProfile" type="TextureRect" parent="Profiles"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.85
anchor_top = 0.27
anchor_right = 0.85
anchor_bottom = 0.27
offset_left = 595.2
offset_top = 161.2
offset_right = 945.2
offset_bottom = 611.2
texture = ExtResource("6_w7wjm")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
